# pennylane-qiskit

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  MANIFEST.in  Makefile  README.rst  pyproject.toml  pytest.ini  qiskit_hardware_tests (1).ipynb  qiskit_hardware_tests.ipynb  requirements-ci-legacy.txt  requirements-ci.txt  requirements-dev.txt  requirements.txt  setup.py  testtensor.py  vb_script.py
.github/: dependabot.yml
.github/workflows/: changelog_template.txt  docs.yml  format.yml  ibmq_tests.yml  ibmq_tests_1.yml  post_release_version_bump.yml  pre_release_version_bump.yml  tests.yml  tests_qiskit.yml  tests_qiskit_1.yml  upload.yml  vb_script.py
doc/: about.rst  code.rst  conf.py  devices.rst  directives.py  expectations.rst  gettingstarted.rst  howtocite.rst  index.rst  installation.rst  license.rst  operations.rst  overview.rst  requirements.txt  support.rst  tutorials.rst
doc/_templates/autosummary/: class.rst  module.rst
doc/_templates/autosummary_core/: base.rst  class.rst  module.rst
doc/code/: aer.rst  basic_aer.rst  gates.rst  ibmq.rst  operations.rst  qiskit_device.rst
doc/devices/: aer.rst  basicaer.rst  basicsim.rst  ibmq.rst  overview.rst  remote.rst  runtime.rst
doc/xanadu_theme/: footer.html  globaltoc.html  header.html  layout.html  searchbox.html
doc/xanadu_theme/static/: xanadu.css_t
new_tests/: conftest.py  test_qiskit_device.py  test_state_simulators.py
pennylane_qiskit/: __init__.py  _version.py  aer.py  basic_aer.py  basic_sim.py  converter.py  devices.py  expval.py  gates.py  generic.py  ibmq.py  load.py  noise_models.py  ops.py  pqops.py  qiskit_device.py  qiskit_device2.py  qiskit_device_legacy.py  qiskitops.py  remote.py  runtime.py  runtime_devices.py  utils.py  vqe_runtime_program.py  vqe_runtime_runner.py
pennylane_qiskit/runtime/: __init__.py  runtime.py  vqe_runner.py  vqe_runtime.py
pennylane_qiskit/runtime_programs/: __init__.py
pennylane_qiskit/vqe/: __init__.py  vqe_runner.py  vqe_runtime.py
pennylane_qiskit/vqe_runtime/: vqe_runner.py
pennylane_runtime/: vqe_runtime.py
runtime_programs/: vqe_runtime_program.py
tests/: .pylintrc  conftest.py  defaults.py  molecule_pyscf_sto-3g.hdf5  pytest.ini  test_adjoints.py  test_apply.py  test_backend_options.py  test_base_device.py  test_basis_state.py  test_compare_with_default_qubit.py  test_converter.py  test_device_initialization.py  test_docs.py  test_expectations.py  test_expval.py  test_ibmq.py  test_integration.py  test_inverses.py  test_load.py  test_new_qiskit_temp.py  test_noise_models.py  test_qiskit_device.py  test_runtime.py  test_sample.py  test_simple_circuits.py  test_unsupported_operations.py  test_var.py  tmp.ipynb
tmp/: tester.ipynb
venv1/: pyvenv.cfg
