[build-system]
requires = ["setuptools>=75.8.1"]
build-backend = "setuptools.build_meta"

[project]
name = "PennyLane-qiskit"
description = "PennyLane plugin for Qiskit"
readme = "README.rst"
requires-python = ">=3.11"
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Physics",
]
license =  "Apache-2.0"
dependencies  = [
    "qiskit>=2.0.0,<=2.3.0",
    "qiskit-aer~=0.17.2",
    "qiskit-ibm-runtime~=0.45.0",
    "pennylane>=0.44.0",
    "sympy",
    "networkx>=2.2",
]

[dependency-groups]
docs = [
    "annotated-types==0.7.0",
    "appdirs==1.4.4",
    "astunparse==1.6.3",
    "autograd==1.8.0",
    "autoray==0.8.2",
    "cachetools==6.2.4",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "cryptography==46.0.7",
    "diastatic-malt==2.15.2",
    "dill==0.4.0",
    "gast==0.7.0",
    "ibm-cloud-sdk-core==3.24.4",
    "ibm-platform-services==0.73.0",
    "idna==3.11",
    "mpmath~=1.3",
    "networkx==3.6.1",
    "numpy==2.4.1",
    "packaging==26.0",
    "pennylane==0.44.0",
    "pennylane-lightning==0.44.0",
    "pennylane-sphinx-theme",
    "psutil==7.2.1",
    "pycparser==2.23",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pyjwt==2.12.1",
    "pyspnego==0.12.0",
    "python-dateutil==2.9.0.post0",
    "qiskit==2.3.0",
    "qiskit-aer==0.17.2",
    "qiskit-ibm-runtime==0.45.0",
    "requests==2.33.1",
    "requests-ntlm==1.3.0",
    "rustworkx==0.17.1",
    "scipy==1.17.0",
    "scipy-openblas32==0.3.30.443.1",
    "six==1.17.0",
    "stevedore==5.6.0",
    "sympy>=1.14.0",
    "termcolor==3.3.0",
    "tomlkit==0.14.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "wheel==0.46.3",
]
ci = [
    "wheel",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "flaky",
    "pennylane @ git+https://github.com/PennyLaneAI/pennylane.git",
]

dev = [
    {include-group = "ci"},
    "pre-commit",
    "pylint",
    "black",
    "isort",
]

[[project.maintainers]]
name = "Xanadu Quantum Technologies Inc."
email = "software@xanadu.ai"

[project.urls]
repository = "https://github.com/PennyLaneAI/pennylane-qiskit"

[tool.setuptools.dynamic]
version = {attr = "pennylane_qiskit._version.__version__"}

[project.entry-points."pennylane.plugins"]
"qiskit.remote" = "pennylane_qiskit:RemoteDevice"
"qiskit.aer" = "pennylane_qiskit:AerDevice"
"qiskit.basicaer" = "pennylane_qiskit:BasicAerDevice"
"qiskit.basicsim" = "pennylane_qiskit:BasicSimulatorDevice"

[project.entry-points."pennylane.io"]
qiskit = "pennylane_qiskit:load"
qiskit_op = "pennylane_qiskit:load_pauli_op"
qiskit_noise = "pennylane_qiskit:load_noise_model"
qasm = "pennylane_qiskit:load_qasm"
qasm_file = "pennylane_qiskit:load_qasm_from_file"